--- a/datum/package.json
+++ b/datum/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "clsx": "^2.1.0",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
-    "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
     "zustand": "^4.5.2"
   },
