--- a/datum/package.json
+++ b/datum/package.json
@@ -11,21 +11,22 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
-    "@types/axios": "^0.9.36",
-    "axios": "^1.8.3",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
+    "clsx": "^2.1.0",
     "tailwind-merge": "^2.1.1",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "framer-motion": "^11.0.8",
+    "axios": "^1.6.7",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
